Fixes ShareModal scroll on iOS

--- a/src/app/components/Share/styles.css
+++ b/src/app/components/Share/styles.css
@@ -83,6 +83,7 @@
   display: block;
   overflow-x: hidden;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .modalBody .preview {
